--- a/style.css
+++ b/style.css
@@ -1,15 +1,38 @@
-.contenedor{
-    margin: auto;
+*{
+    margin: 0;
+}
+
+.oculto {
+    display: none !important;
+}
+
+li a {
+    text-decoration: none;
+    color: inherit;
+}
+
+button a {
+    text-decoration: none;
+    color: inherit;
+}
+
+li a:hover{
+    text-decoration: none;
+    color: #00a8e8;
+}
+
+#contenedor{
+    display: flex;
+    margin: 2vh auto;
     align-self: center;
     width: 80vw;
-    display: flex;
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 1vw;
 }
 
-.producto{
+#contenedor .producto{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,6 +41,7 @@
     height: 400px;
     border: 2px solid black;
     text-align: center;
+    font-family: "Montserrat", sans-serif;
 }
 
 header {
@@ -27,17 +51,53 @@ header {
     align-items: center;
     justify-content: center;
     gap: 10vw;
+    background-color: black;
 }
 
 .navBar{
     list-style: none;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: "Montserrat", sans-serif;
+    color: white;
     display: flex;
     flex-direction: row;
     width: 40vw;
     justify-content: space-around;
     align-items: center;
     margin: auto;
+}
+
+.paginaInicio div {
+    object-fit:cover;
+    width: 100%;
+    position: relative;
+}
+
+#imagenInicio{
+    object-fit:cover;
+    width: 100%;
+    height: 100vh;
+    filter: brightness(0.5);
+    display: block;
+}
+
+h1{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 900;
+    color: white;
+    font-size: 10vw;
+    position: absolute;
+    z-index: 100;
+    left: 5%;
+    top: 30%;
+}
+
+h2{
+    font-family: "Montserrat", sans-serif;
+    color: white;
+    position: absolute;
+    z-index: 100;
+    left: 5%;
+    top: 55%;
 }
 
 #buscador {
@@ -47,13 +107,20 @@ header {
 
 button {
     color: white;
-    font-family: fantasy;
-    background-color: aquamarine;
+    font-family: "Montserrat", sans-serif;
+    background-color: #003459;
     border: solid 1px black;
+    height: 2.8vh;
 }
 
-.oculto {
-    display: none;
+.tituloCesta{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 800;
+    width: 80vw;
+    margin: 2vh auto auto auto; 
 }
 
 .articuloCesta{
@@ -74,4 +141,62 @@ button {
 .popUp{
     border: solid black;
     margin: auto;
+}
+
+.imagenProducto {
+    height: 70%;
+    width: 70%;
+    object-fit: contain;
+}
+
+#paginaCesta {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#cajaCesta {
+    margin: 2vh auto;
+    border: solid #003459 2px;
+    width: 80vw;
+    justify-content: center;
+}
+
+#cajaCesta p {
+    font-family: "Montserrat", sans-serif;
+}
+
+#botonComprar {
+    width: 10vw;
+}
+
+#totalCesta {
+    font-family: "Montserrat", sans-serif;
+    margin: auto auto 1vh auto;
+    justify-content: center;
+}
+
+.swal2-container h2{
+    font-size: 24px;
+    text-align: center;
+    margin: auto;
+    position: inherit;
+    left: 0;
+    top: 0;
+}
+
+.swal2-container p{
+    font-size: 20px;
+    text-align: center;
+    margin: auto;
+    position: inherit;
+    left: 0;
+    top: 0;
+    font-family: "Montserrat", sans-serif;
+}
+
+.swal2-actions{
+    height: 50%;
+    display: flex;
 }
